manifest/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: timsku2002/gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          command: [ "/usr/bin/krakend" ]
          args: [ "run", "-d", "-c", "/etc/krakend/krakend.json", "-p", "80" ]
